--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,8 +14,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :date %><br />
-    <%= f.date_field :email, autofocus: true %>
+    <%= f.label :birthdate %><br />
+    <%= f.date_field :birthdate, autofocus: true %>
   </div>
 
 
