--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,50 +1,23 @@
+<html>
+<head>
+<%nav_bar brand:"Kustee", brand_link: root_url%>
 <h1>Home#index</h1>
 <p> by caalera </p>
-<div class = "container">
-<nav class = "navbar" role = "navigation" aria-labe="main navigation">
-<div id="navbarBasicExample" class="navbar-menu">
-<div class ="navbar-start">
- "
-<%= link_to "page", root_path, class: "navbar-item" %>
-<%=link_to "My list", wants_path , class: "navbar_item" %>
-<%= link_to "find_movies", find_movies_path, class >"navbar_item" %>
+<div>
+<h1>What movie do you to see?</h1>
+<%= link_to "finds_movies", finds_movies_path %>
+</div>
 
+<%= link_to "page", root_path, class: "navbar-item" %>
+<div>
+<h2> Movie List </h2>
+<%=link_to "My list", wants_path %>
 </div>
-</div>
-<div class ="navbar-end">
-<div class ="navbar-item">
-<div class="buttons">
+</head>
+<body>
+</body>
 
 <%= link_to "Sair", destroy_user_session_path, method: :delete %>
 <%= link_to "Perfil", edit_user_registration_path %>
-</div>
-</div>
-</div>
-</nav>
 
-<h1 class = "title is-3">DesafioJera</h1>
-<p> Welcome! Let's create a movie list? </p>
-<p class="notice"><%=notice%> </p>
-<p class="alert"><%=alert%></p>
-<br>
-<div class = "field">
-<%=form_tag(finds_path, method: :get) do%>
-<%= label_tag(:q, "find what you want to watch", class: "label")%>
-<%= text_field_tag(:q, '', class: "input is-info")%>
-<br>
-<%= submit_tag("Search", class :"button is info")%>
-<% end %>
-</div>
-<br>
-<br>
-<br>
-<br>
-
-<footer class="footer">
-<div calss="content has-text-centered">
-<p>
-<strong>Desafio</strong> 
-</p>
-</div>
-</footer>
-</div>
+</html>
