--- a/app/views/finded_movies/index.html.erb
+++ b/app/views/finded_movies/index.html.erb
@@ -1,4 +1,4 @@
-<h1> finded movies<h1>
+<h1> |Movie List|<h1>
 <div class="container">
   <div class="row">
     <div class="col-sm">
@@ -30,7 +30,7 @@
 <tr>
 <td><%=movie['title']%></td>
 <td><img src='http://image.tmdb.org/t/p/w185<%=movie['poster_path']%>' /></td>
-<td><%= link_to "Remove from list", finded_movie_path(movie_code: movie['id']), method: :delete %></td>
+<td><%= link_to "Remove from list", finded_movie_path(id: movie['id']), method: :delete %></td>
 </tr>
 <% end %>
 </tbody>
